implementa permissões
