# internal/api/api.go
@@ -5,6 +5,7 @@ import (
 	"authenticator/internal/spec"
 	"encoding/json"
 	"errors"
+	"fmt"
 	"net/http"
 	"strings"
 	"time"
@@ -14,6 +15,7 @@ import (
 	"github.com/go-playground/validator/v10"
 	pt_br_translations "github.com/go-playground/validator/v10/translations/pt_BR"
 	"github.com/golang-jwt/jwt/v5"
+	"github.com/google/uuid"
 	"github.com/jackc/pgx/v5"
 	"github.com/jackc/pgx/v5/pgxpool"
 	"go.uber.org/zap"
@@ -65,49 +67,87 @@ func NewAPI(pool *pgxpool.Pool, logger *zap.Logger) API {
 // Autentica usuário
 // (POST /login)
 func (api API) PostLogin(w http.ResponseWriter, r *http.Request) *spec.Response {
-	var body spec.Credentials
+	var credentials spec.Credentials
 
-	err := json.NewDecoder(r.Body).Decode(&body)
+	// decodifica body armazenando dados nas credenciais
+	err := json.NewDecoder(r.Body).Decode(&credentials)
 	if err != nil {
 		return spec.PostLoginJSON400Response(spec.Error{Feedback: "Dados inválidos: " + err.Error()})
 	}
 
-	if err := api.validator.validate.Struct(body); err != nil {
+	// valida dados de entrada
+	if err := api.validator.validate.Struct(credentials); err != nil {
 		return spec.PostLoginJSON400Response(spec.Error{Feedback: api.validator.Translate(err)})
 	}
 
-	user, err := api.store.GetUser(r.Context(), string(body.Email))
+	// busca usuário no banco de dados
+	user, err := api.store.GetUser(r.Context(), string(credentials.Email))
 	if err != nil {
 		if errors.Is(err, pgx.ErrNoRows) {
 			return spec.PostLoginJSON400Response(spec.Error{Feedback: "E-mail ou senha inválidos"})
 		}
-		api.logger.Error("Falha ao buscar usuário", zap.String("email", string(body.Email)), zap.Error(err))
-		return spec.PostLoginJSON500Response(spec.InternalServerError{})
+		api.logger.Error("Falha ao buscar usuário", zap.String("email", string(credentials.Email)), zap.Error(err))
+		return spec.PostLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
 	}
 
-	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(body.Password)); err != nil {
+	// verifica status
+	if user.Status.String == "inactive" {
+		return spec.PostLoginJSON401Response(spec.Unauthorized{Feedback: "Usuário está inativo"})
+	}
+
+	// compara senhas
+	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(credentials.Password)); err != nil {
 		if errors.Is(err, bcrypt.ErrMismatchedHashAndPassword) {
 			return spec.PostLoginJSON400Response(spec.Error{Feedback: "E-mail ou senha inválidos"})
 		}
-		api.logger.Error("Falha comparar hash com senha", zap.String("password", string(body.Password)), zap.Error(err))
-		return spec.PostLoginJSON500Response(spec.InternalServerError{})
+		api.logger.Error("Falha comparar hash com senha", zap.String("password", string(credentials.Password)), zap.Error(err))
+		return spec.PostLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
 	}
 
-	secret := "implementar-depois"
+	// mapeia grupos (json)
+	groups := make(map[string]interface{})
+	json.Unmarshal(user.Groups, &groups)
 
+	// verifica se o grupo da aplicação está na lista de grupos do usuário
+	if groups[credentials.Application] == nil {
+		return spec.PostLoginJSON401Response(spec.Unauthorized{Feedback: "Usuário cadastrado, mas sem acesso à aplicação"})
+	}
+
+	// monta UUIDs
+	groupId := uuid.MustParse(fmt.Sprintf("%+v", groups[credentials.Application]))
+	applicationId := uuid.MustParse(credentials.Application)
+
+	// busca informações da aplicação
+	application, err := api.store.GetApplication(r.Context(), applicationId)
+	if err != nil {
+		api.logger.Error("Falha ao tentar buscar aplicação por applicationId", zap.Error(err))
+		return spec.PostUsersJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
+	}
+
+	// busca permissões do grupo na aplicação
+	permissions, err := api.store.GetPermissionsGroup(r.Context(), groupId)
+	if err != nil {
+		api.logger.Error("Falha ao tentar buscar permissões por groupId", zap.Error(err))
+		return spec.PostUsersJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
+	}
+
+	// cria token JWT
 	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
-		"iss": "authenticator_ID",
-		"sub": body.Email,
-		"aud": "authenticator",
-		"exp": time.Now().Add(time.Hour * 12).Unix(),
-		"iat": time.Now().Unix(),
+		"iss":   "authenticator",
+		"sub":   user.Email,
+		"aud":   credentials.Application,
+		"exp":   time.Now().Add(time.Hour * 12).Unix(),
+		"iat":   time.Now().Unix(),
+		"roles": string(permissions[:]),
 	})
 
-	signedToken, err := token.SignedString([]byte(secret))
+	// assina token JWT usando a chave secreta da aplicação
+	signedToken, err := token.SignedString([]byte(application.Secret.String()))
 	if err != nil {
 		api.logger.Error("Falha ao assinar token", zap.String("token", token.Raw), zap.Error(err))
-		return spec.PostLoginJSON400Response(spec.Error{Feedback: "Falha ao tentar fazer login, tente novamente em alguns minutos"})
+		return spec.PostLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
 	}
 
-	return spec.PostLoginJSON200Response(spec.LoginResponse{Token: signedToken})
+	// retorna token JWT para o cliente
+	return spec.PostLoginJSON200Response(spec.LoginResponse{Token: signedToken, Feedback: "sessão iniciada"})
 }
